<resources>
    <string name="action_settings">Action Settings</string>
    <string name="prompt_password">please enter password</string>
    <string name="app_name">Big</string>
    <string name="action_sign_in_short">Create Profile</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Big</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email*</string>
    <string name="forgot_email">Enter Account Email</string>
    <string name="hint_password">Password*</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Create Account</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="title_activity_accounttype">AccountTypedActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Request Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">FORGOTTEN PASSWORD</string>
    <string name="forgot_password_msg">Enter the email address associated with your account then hit Request. The password will be sent to that email.</string>


    //fb login
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="fb_login_protocol_scheme">FB Sign In</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user..</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>

    <string name="action_search">Search</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="my_tb_subtitle">Your Name</string>
    <string name="welcome_title">Welcome</string>



    <!-- nav bar add-on -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <!-- Title Bar -->
    <string name="Title_CreateProfile">Create Profile</string>
    <!-- Title Bar -->

    <!-- Profile Creation Step 1 -->
    <string name="Hint_FirstName">First Name</string>
    <string name="Hint_LastName">Last Name</string>
    <string name="Hint_CompanyName">Company Name</string>
    <string name="Hint_ZipCode">Zip Code</string>
    <string name="Hint_Phone">Phone</string>
    <string name="Hint_Email">Email</string>
    <!-- Profile Creation Step 1 -->

    <!-- Profile Creation Step 2 -->
    <string name="Hint_WorkSpecialties">Work Specialties</string>
    <string name="Hint_ProfilePhoto">Profile Photo</string>
    <string name="Hint_Licenses">Licenses</string>
    <string name="Hint_Insurance">Insurance</string>
    <string name="Hint_Website">Website</string>
    <!-- Profile Creation Step 2 -->

    <!-- Profile Creation Step 3 -->
    <string name="Lbl_AccountType">Account Type</string>
    <string-array name="Account_Types">
        <item>Individual</item>
        <item>Business</item>
    </string-array>
    <!-- Profile Creation Step 3 -->


</resources>