<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:orientation="vertical"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@drawable/bg_blueprint"
                                                 android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="vertical"
        >


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_big" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="Work. Local. Now."
            android:gravity="center"
            android:textSize="35dp"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:id="@+id/forgot">



        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/lbl_forgot_password"
            android:textColor="#4068c7"
            android:textSize="25sp"
            android:background="#ffffff"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/Forgot"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:singleLine="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_msg"
            android:textColor="#4068c7"
            android:textSize="14sp"
            android:background="#ffffff"
            android:textStyle="bold"
            android:layout_below="@+id/Forgot"
            android:gravity="center_horizontal|top"
            android:singleLine="false"
            android:textIsSelectable="true"
            android:layout_alignParentEnd="false"/>
    </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText

                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/forgot_email"
                android:background="@drawable/rounded_edittext"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:gravity="center"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_editpass"

            android:text="@string/btn_reset_password"
            android:textColor="#ffffff"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_back"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>